@@ -16,6 +16,7 @@ interface PlayingQueueGateway {
     fun update(list: List<UpdatePlayingQueueUseCaseRequest>): Completable
 
     fun observeMiniQueue(): Observable<List<PlayingQueueSong>>
+    fun getMiniQueueBlocking(): List<PlayingQueueSong>
     fun updateMiniQueue(tracksId: List<Pair<Int, Long>>)
 
 }
