@@ -9,7 +9,7 @@ import dev.olog.msc.R
 import dev.olog.msc.constants.MusicConstants
 import dev.olog.msc.dagger.qualifier.ApplicationContext
 import dev.olog.msc.domain.entity.PlayingQueueSong
-import dev.olog.msc.domain.interactor.playing.queue.GetMiniQueueUseCase
+import dev.olog.msc.domain.interactor.playing.queue.GetMiniQueueBlockingUseCase
 import dev.olog.msc.presentation.model.DisplayableItem
 import dev.olog.msc.utils.MediaId
 import dev.olog.msc.utils.k.extension.getBitmapAsync
@@ -17,7 +17,7 @@ import javax.inject.Inject
 
 class QueueRemoteViewsFactory @Inject constructor(
         @ApplicationContext private val context: Context,
-        private val getMiniQueueUseCase: GetMiniQueueUseCase
+        private val getMiniQueueUseCase: GetMiniQueueBlockingUseCase
 
 ) : RemoteViewsService.RemoteViewsFactory {
 
@@ -30,7 +30,7 @@ class QueueRemoteViewsFactory @Inject constructor(
     override fun getLoadingView(): RemoteViews? = null
 
     override fun onDataSetChanged() {
-        val data = getMiniQueueUseCase.execute().blockingGet()
+        val data = getMiniQueueUseCase.execute()
         this.dataSet.clear()
         this.dataSet.addAll(data.map { it.toWidgetItem() })
     }
