@@ -7,6 +7,7 @@
 - fixed app widget not working
 - synced offline lyrics improvements
 - fixed sort by date
+- fixed app widget with queue
 
 2.0.11
 - removed unused code
